Fixed spacing in the articles page

--- a/src/App.css
+++ b/src/App.css
@@ -468,11 +468,11 @@
 }
 
 .one-line {
-  margin-top: 21px;
+  margin-top: 32px;
 }
 
 .two-line {
-  margin-top: 5px;
+  margin-top: 10px;
 }
 
 
